--- a/style.css
+++ b/style.css
@@ -10,3 +10,39 @@
     text-decoration: none;
     box-sizing: border-box;
   }
+
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Helvetica Neue', Arial, sans-serif;
+  }
+
+  h2 {
+    font-size: 40px;
+    text-align: center;
+  }
+
+  .container {
+    background-color: #ffffff;
+  }
+
+  .mini-container{
+      background-color: #eeeeee;
+      margin: 2em 1em;
+  }
+
+  .image {
+      background-color: #ffffff;
+      width: 98%;
+      margin: 0 auto;
+  }
+
+  img {
+      display: block;
+      margin: 0 auto;
+      text-align: center;
+  }
+
+  p {
+      font-size: 1rem;
+      text-align: center;
+  }
