--- a/style.css
+++ b/style.css
@@ -40,9 +40,11 @@
       display: block;
       margin: 0 auto;
       text-align: center;
+      width: 50%;
   }
 
   p {
-      font-size: 1rem;
+      font-size: 1.4rem;
       text-align: center;
+      margin: 0.5em 1em;
   }
